# gistui

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  config.example.toml  install.ps1  install.sh  mise.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-pages.yml  publish.yml  release.yml
.memories/: 2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-13.md  2026-06-14.md
docs/: INSTALL.md  README.md  SAFETY.md  index.html
reference/: INSTALL.md
scripts/demo/: README.md  fake-gh  last_frame.py  record.py  record.sh  seed.py  shoot.py  shots.sh  storyboard.json
scripts/demo/shots/: gist-manager.json
scripts/release/: update-homebrew-formula.sh  update-scoop-manifest.sh
src/: actions.rs  cache.rs  config.rs  diff.rs  domain.rs  gh.rs  lib.rs  local.rs  lru.rs  main.rs  ranking.rs  tui.rs  update_check.rs  upgrade.rs
src/tui/: bg.rs  dispatch.rs  highlight.rs  keys.rs  mod.rs  palette.rs  render.rs  run_loop.rs  tests.rs  text.rs  text_input.rs  theme.rs
tests/: gh_integration.rs
tests/fixtures/gh/: gist-comments.json  gist-commits.json  gist-list.json  gist-revision.json  gist-starred.json
website/: index.html
