[package]
name = "gistui"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "A terminal UI for managing GitHub Gists"
repository = "https://github.com/akunzai/gistui"
homepage = "https://akunzai.github.io/gistui/"
keywords = ["tui", "gist", "github", "cli", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.11"
similar = "3"
synoptic = "2.2.9"
toml = "1.1"

[dev-dependencies]
tempfile = "3"
