[package]
name = "gistui"
version = "0.14.0"
edition = "2021"
license = "MIT"
description = "A terminal UI for managing GitHub Gists"
repository = "https://github.com/akunzai/gistui"
homepage = "https://akunzai.github.io/gistui/"
keywords = ["tui", "gist", "github", "cli", "terminal"]
categories = ["command-line-utilities"]
# Keep the published crate lean: ship the source, user docs and license but not
# the demo harness, site assets, CI config, install scripts or contributor/release
# process docs. The README's demo GIF is referenced by absolute URL, so it still
# renders on crates.io without shipping it.
exclude = [
    "/.github",
    "/docs",
    "/scripts",
    "/install.sh",
    "/install.ps1",
    "/AGENTS.md",
    "/CLAUDE.md",
    "/CONTRIBUTING.md",
    "/RELEASING.md",
    "/.gitignore",
]

# Let `cargo binstall gistui` reuse the GitHub Release assets built by release.yml
# (`gistui-vX.Y.Z-<target>.tar.gz`, `.zip` on Windows; each archive holds a
# `gistui-vX.Y.Z-<target>/` dir with the binary). Takes effect from the next
# published version onward.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/gistui-v{ version }-{ target }{ archive-suffix }"
bin-dir = "gistui-v{ version }-{ target }/{ bin }{ binary-ext }"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
flate2 = "1"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.11"
similar = "3"
synoptic = "2.2.9"
tar = "0.4"
toml = "1.1"
ureq = "2"
# Only DEFLATE is needed: the Windows release asset is built with PowerShell
# Compress-Archive (always DEFLATE) and upgrade.rs only reads entries by name.
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
